exports[`no-object-as-default-parameter > invalid(1): /**/function abc(foo = {a: 123}) {} 1`] = `

  1 | /**/function abc(foo = {a: 123}) {}

`;

exports[`no-object-as-default-parameter > invalid(1): /**/function abc(foo = {a: 123}) {} 2`] = `

Message:
> 1 | /**/function abc(foo = {a: 123}) {}
    |                  ^^^ Do not use an object literal as default for parameter \`foo\`.

`;

exports[`no-object-as-default-parameter > invalid(2): const abc = (foo = {a: false}) => {}; 1`] = `

  1 | const abc = (foo = {a: false}) => {};

`;

exports[`no-object-as-default-parameter > invalid(2): const abc = (foo = {a: false}) => {}; 2`] = `

Message:
> 1 | const abc = (foo = {a: false}) => {};
    |              ^^^ Do not use an object literal as default for parameter \`foo\`.

`;

exports[`no-object-as-default-parameter > invalid(3): function abc({a} = {a: 123}) {} 1`] = `

  1 | function abc({a} = {a: 123}) {}

`;

exports[`no-object-as-default-parameter > invalid(3): function abc({a} = {a: 123}) {} 2`] = `

Message:
> 1 | function abc({a} = {a: 123}) {}
    |                    ^^^^^^^^ Do not use an object literal as default.

`;

exports[`no-object-as-default-parameter > invalid(4): function abc([a] = {a: 123}) {} 1`] = `

  1 | function abc([a] = {a: 123}) {}

`;

exports[`no-object-as-default-parameter > invalid(4): function abc([a] = {a: 123}) {} 2`] = `

Message:
> 1 | function abc([a] = {a: 123}) {}
    |                    ^^^^^^^^ Do not use an object literal as default.

`;
